k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: todo
  name: todo-app
  labels:
    app: todo
    type: api
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  replicas: 3
  selector:
    matchLabels:
      app: todo
      type: api
  template:
    metadata:
      labels:
        app: todo
        type: api
    spec:
      imagePullSecrets:
        - name: git.me.com
      containers:
        - name: todo-api
          image: git.me.com:5050/cicd/go-api-todolist
          imagePullPolicy: Always

          livenessProbe:
            httpGet:
              port: 8000
              path: /healthz
          resources:
            requests:
              cpu: 100m
              memory: 20Mi
            limits:
              cpu: 500m
              memory: 100Mi
