k8s/mongo-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: mongodb
    type: db
  name: mongo
  namespace: todo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mongodb
      type: db
  serviceName: mongodb
  template:
    metadata:
      labels:
        app: mongodb
        type: db
    spec:
      imagePullSecrets:
        - name: git.me.com
      containers:
        - name: mongo
          image: git.me.com:5050/images/mongo:latest
          command:
            - mongod
            - --replSet
            - rs0
            - --bind_ip_all
          ports:
            - containerPort: 27017
              name: mongo-port
          livenessProbe:
            exec:
              command:
                - mongosh
                - --eval
                - db.serverStatus()
            initialDelaySeconds: 10
            timeoutSeconds: 5
          volumeMounts:
            - mountPath: /data/db
              name: mongo-data
        - name: mongo-init
          image: git.me.com:5050/images/mongo:latest
          command:
            - bash
            - /config/init.sh
          volumeMounts:
            - mountPath: /config
              name: init
      volumes:
        - name: init
          configMap:
            name: mongo-init
  volumeClaimTemplates:
    - metadata:
        namespace: todo
        name: mongo-data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: openebs-hostpath
        resources:
          requests:
            storage: 1Gi
