k8s/mongo-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-api-todo
  labels:
    app: todo
