k8s/mongo.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: todo-mongo
spec:
  serviceName: mongo
  replicas: 3
  selector:
    matchLabels:
      app: todo-db
  template:
    metadata:
      labels:
        app: todo-db
    spec:
      containers:
        - name: mongodb
          image: 192.168.1.34:5000/mongo:5
          command:
            - mongod
            - --replSet
            - rs0
            - --bind_ip
            - "0.0.0.0"
          ports:
            - name: mongo
              containerPort: 27017
          livenessProbe:
            exec:
              command:
                - /usr/bin/mongo
                - --eval
                - db.serverStatus()
            initialDelaySeconds: 10
            timeoutSeconds: 10
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
            - name: config
              mountPath: /config
        - name: mongo-init
          image: 192.168.1.34:5000/mongo:5
          command:
            - bash
            - /config/init.sh
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          configMap:
            name: "mongo-init"

  volumeClaimTemplates:
    - metadata:
        name: mongo-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: todo-api-hostpath
        resources:
          requests:
            storage: 2Gi
