k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-svc

spec:
  selector:
    app: todo
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
