k8s/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: todo
  name: todo-api
  namespace: todo
spec:
  selector:
    app: todo
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
