k8s/mongo-clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
  labels:
    app: mongo-db
spec:
  selector:
    app: todo-db
  ports:
    - port: 27017
      name: mongodb
      targetPort: 27017
