k8s/mongo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongodb
    type: db
  name: mongodb
  namespace: todo
spec:
  selector:
    app: mongodb
    type: db
  clusterIP: None
  ports:
    - port: 27017
      targetPort: 27017
      name: mongoport
