k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  annotations:
    load-balance: round-robin

spec:
  ingressClassName: haproxy
  rules:
    - host: todoapp.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: todo-svc
                port:
                  number: 8000
